# RAKU

./: CMakeLists.txt  LICENSE  README.md
include/RAKU/: debug.h  export.h  json.h  raku.h  string.h
include/RAKU/core/: defs.h  log.h  memory.h  status.h
src/: CMakeLists.txt  string.c
src/core/: log.c  memory.c  status.c
src/debug/: assert.c
src/json/: json_parse.c  json_values.c  json_values.h
